--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
+  },
+  "scripts": {
+    "tsc": "tsc",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
   }
 }
